fix docs : change titles

--- a/train.ipynb
+++ b/train.ipynb
@@ -808,6 +808,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-1. falling detector 학습"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1643,7 +1650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-1. 정상적인 자세의 사람과 넘어진 사람을 구분할 수 있는 모델 학습\n",
+    "### 2-2. 정상적인 자세의 사람과 넘어진 사람을 구분할 수 있는 모델 학습\n",
     "\n",
     "dataset url : https://universe.roboflow.com/nahyun/test-fjna0/dataset/4"
    ]
@@ -2424,7 +2431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-2. 재학습 #1\n",
+    "### 2-3. 재학습 #1\n",
     "상기 인식률이 저조하여 데이터셋 재탐색\n",
     "\n",
     "dataset url : https://universe.roboflow.com/ethicsense/casualty-detection"
@@ -3128,7 +3135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-3. 재학습 #2\n",
+    "### 2-4. 재학습 #2\n",
     "기존 모델 모두 인식률 매우 저조함<br>\n",
     "새로운 데이터셋 탐색하여 학습\n",
     "\n",
